feat(api): implementa controle de acesso por roles e validação completa de tokens JWT