@@ -1,5 +1,7 @@
 package com.nexus.backend.config;
 
+import com.auth0.jwt.exceptions.JWTVerificationException;
+import com.auth0.jwt.interfaces.DecodedJWT;
 import com.nexus.backend.model.Usuario;
 import com.nexus.backend.repository.UsuarioRepository;
 import com.nexus.backend.service.TokenService;
@@ -7,46 +9,49 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
+import org.jspecify.annotations.NonNull;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Component
 public class SecurityFilter extends OncePerRequestFilter {
 
-    @Autowired
-    private TokenService tokenService;
+    private final TokenService tokenService;
 
-    @Autowired
-    private UsuarioRepository usuarioRepository;
+    private final UsuarioRepository usuarioRepository;
+
+    public SecurityFilter(TokenService tokenService, UsuarioRepository usuarioRepository) {
+        this.tokenService = tokenService;
+        this.usuarioRepository = usuarioRepository;
+    }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain)
             throws ServletException, IOException {
 
         var token = this.recuperarToken(request);
-
-        if (token != null) {
-            var loginEmail = tokenService.validarToken(token);
-
-            if (!loginEmail.isEmpty()) {
-                // CORREÇÃO: Usando o usuarioRepository e o método findByEmail
-                Optional<Usuario> usuarioOpt = usuarioRepository.findByEmail(loginEmail);
-
-                if (usuarioOpt.isPresent()) {
-                    Usuario usuario = usuarioOpt.get();
-
-                    var authentication = new UsernamePasswordAuthenticationToken(usuario, null,
-                            Collections.emptyList());
-                    SecurityContextHolder.getContext().setAuthentication(authentication);
-                }
+        try {
+            DecodedJWT decodedJWT = tokenService.validarTokenCompleto(token);
+            String loginEmail = decodedJWT.getSubject();
+            String perfil = decodedJWT.getClaim("perfil").asString();
+            Optional<Usuario> usuarioOpt = usuarioRepository.findByEmail(loginEmail);
+            if (usuarioOpt.isPresent()) {
+                Usuario usuario = usuarioOpt.get();
+                var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + perfil));
+                var authentication = new UsernamePasswordAuthenticationToken(usuario, null, authorities);
+                SecurityContextHolder.getContext().setAuthentication(authentication);
             }
+        } catch (JWTVerificationException e) {
+            throw new JWTVerificationException(e.getMessage());
         }
 
         filterChain.doFilter(request, response);
